--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- ページのビューポートを設定し、モバイルフレンドリーに -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 検索エンジン向けのページ説明 -->
-    <meta name="description" content="Simple Responsive Webpage with Semantic HTML">
-    <title>My Responsive Webpage</title>
+    <meta name="description" content="Chie Shikanai Eklund's Personal Portfolio">
+    <title>Chie Shikanai Eklund's Portfolio</title>
     <!-- 外部CSSファイルをリンク -->
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,14 +14,14 @@
     <!-- ヘッダー部分 -->
     <header>
         <!-- メインタイトル -->
-        <h1>My Responsive Website</h1>
+        <h1>Chie Shikanai Eklund's Portfolio</h1>
         <!-- ナビゲーションメニュー -->
         <nav>
             <ul>
                 <!-- 各セクションへのリンク -->
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -29,51 +29,51 @@
 
     <!-- ホームセクション -->
     <section id="home">
-        <h2>Welcome to My Website</h2>
-        <p>This is a simple and fully responsive website created with HTML and CSS.</p>
+        <h2>Welcome to My Portfolio</h2>
+        <p>I'm Chie Shikanai Eklund, a web designer and developer. Explore my work and get in touch if you'd like to collaborate!</p>
     </section>
 
     <!-- アバウトセクション -->
     <section id="about">
-        <h2>About Us</h2>
+        <h2>About Me</h2>
         <!-- ミッションについての記事 -->
-        <!-- article 要素を使うと、支援技術が文書構造を理解しやすくなり、独立したコンテンツとしてナビゲーションが容易になります。-->
+        <!-- articleユーザーにとってナビゲーションしやすい -->
         <article>
-            <h3>Our Mission</h3>
-            <p>We aim to provide high-quality services to our clients while ensuring accessibility and usability.</p>
+            <h3>My Journey</h3>
+            <p>I have been working in web design and development for over 5 years, specializing in creating responsive and user-friendly websites.</p>
         </article>
-        <!-- チームについての記事 -->
+        <!-- スキルについての記事 -->
         <article>
-            <h3>Our Team</h3>
-            <p>Our team consists of dedicated professionals who are experts in their respective fields.</p>
+            <h3>Skills & Expertise</h3>
+            <p>My skill set includes HTML, CSS, JavaScript, and various front-end frameworks.</p>
         </article>
     </section>
 
-    <!-- サービスセクション -->
-    <section id="services">
-        <h2>Our Services</h2>
-        <!-- 提供するサービスのリスト -->
+    <!-- プロジェクトセクション -->
+    <section id="projects">
+        <h2>My Projects</h2>
         <ul>
-            <li>Web Design</li>
-            <li>SEO Optimization</li>
-            <li>Content Creation</li>
+            <li><a href="project1.html">Project One</a> - A description of the first project.</li>
+            <li><a href="project2.html">Project Two</a> - A description of the second project.</li>
+            <li><a href="project3.html">Project Three</a> - A description of the third project.</li>
         </ul>
     </section>
 
     <!-- コンタクトセクション -->
     <section id="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions or need more information, feel free to contact us at:</p>
-        <!-- メールリンク -->
-        <p>Email: <a href="mailto:info@mywebsite.com">info@mywebsite.com</a></p>
+        <h2>Contact Me</h2>
+        <p>If you have any questions or would like to discuss a potential project, feel free to reach out:</p>
+        <p>Email: <a href="mailto:chie.shikanai@example.com">chie.shikanai@example.com</a></p>
         <p>Phone: 123-456-7890</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/chieshikanai">linkedin.com/in/chieshikanai</a></p>
+        <p>GitHub: <a href="https://github.com/chieshikanai">github.com/chieshikanai</a></p>
     </section>
 
     <!-- フッター部分 -->
     <footer>
-        <p>Contact us at: <a href="mailto:info@mywebsite.com">info@mywebsite.com</a></p>
         <!-- 著作権表示 -->
-        <p>&copy; 2024 My Responsive Website</p>
+        <p>&copy; 2024 Chie Shikanai Eklund</p>
     </footer>
 </body>
 </html>
+
