--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     <!-- ホームセクション -->
     <section id="home">
         <h2>Welcome to My Portfolio</h2>
-        <p>I'm Chie Shikanai Eklund, a web designer and developer. Explore my work and get in touch if you'd like to collaborate!</p>
-    </section>
+        <p>Hello, I'm Chie Shikanai Eklund. As an aspiring full-stack developer, I'm excited to be on this journey of learning and growth in web development. With foundational knowledge in HTML, CSS, JavaScript, and Java, I'm eager to apply these skills and continue developing my expertise to create functional and engaging web applications.</p>
 
     <!-- アバウトセクション -->
     <section id="about">
@@ -40,12 +39,18 @@
         <!-- articleユーザーにとってナビゲーションしやすい -->
         <article>
             <h3>My Journey</h3>
-            <p>I have been working in web design and development for over 5 years, specializing in creating responsive and user-friendly websites.</p>
+            <p>My journey in web development began with learning the basics of HTML, CSS, JavaScript, and Java. I started by creating simple web pages and gradually took on more complex projects to enhance my skills. While I am still building my expertise, each project and challenge helps me grow and gain confidence in my abilities.</p>
         </article>
-        <!-- スキルについての記事 -->
+        <!-- スキルについての記事 ドットリスト-->
         <article>
             <h3>Skills & Expertise</h3>
-            <p>My skill set includes HTML, CSS, JavaScript, and various front-end frameworks.</p>
+            <ul>
+                <li><strong>Front-End Development:</strong> Basic proficiency in HTML, CSS, and JavaScript, focusing on creating simple and responsive web designs.</li>
+                <li><strong>Back-End Development:</strong> Fundamental knowledge of Java, working on basic server-side functionalities.</li>
+                <li><strong>Responsive Design:</strong> Utilizing basic media queries to ensure websites are functional on various devices.</li>
+                <li><strong>Accessibility:</strong> Learning and applying basic accessibility principles to create inclusive web experiences.</li>
+                <li><strong>Tools:</strong> Experience with Visual Studio Code and GitHub for development and version control.</li>
+            </ul>
         </article>
     </section>
 
@@ -63,10 +68,9 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <p>If you have any questions or would like to discuss a potential project, feel free to reach out:</p>
-        <p>Email: <a href="mailto:chie.shikanai@example.com">chie.shikanai@example.com</a></p>
+        <p>Email: <a href="mailto:shikachie@gmail.com">shikachie@gmail.com</a></p>
         <p>Phone: 123-456-7890</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/chieshikanai">linkedin.com/in/chieshikanai</a></p>
-        <p>GitHub: <a href="https://github.com/chieshikanai">github.com/chieshikanai</a></p>
+        <p>GitHub: <a href="https://github.com/Chie1115">github.com/Chie1115</a></p>
     </section>
 
     <!-- フッター部分 -->
