change komment to english

--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- ページのビューポートを設定し、モバイルフレンドリーに -->
+    <!-- Set the viewport for mobile-friendly design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- 検索エンジン向けのページ説明 -->
+    <!-- Page description for search engines -->
     <meta name="description" content="Chie Shikanai Eklund's Personal Portfolio">
     <title>Chie Shikanai Eklund's Portfolio</title>
-    <!-- 外部CSSファイルをリンク -->
+    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- ヘッダー部分 -->
+    <!-- Header section -->
     <header>
-        <!-- メインタイトル -->
+        <!-- Main title -->
         <h1>Chie Shikanai Eklund's Portfolio</h1>
-        <!-- ナビゲーションメニュー -->
+        <!-- Navigation menu -->
         <nav>
             <ul>
-                <!-- 各セクションへのリンク -->
+                <!-- Links to various sections -->
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -27,21 +27,22 @@
         </nav>
     </header>
 
-    <!-- ホームセクション -->
+    <!-- Home section -->
     <section id="home">
         <h2>Welcome to My Portfolio</h2>
         <p>Hello, I'm Chie Shikanai Eklund. As an aspiring full-stack developer, I'm excited to be on this journey of learning and growth in web development. With foundational knowledge in HTML, CSS, JavaScript, and Java, I'm eager to apply these skills and continue developing my expertise to create functional and engaging web applications.</p>
+    </section>
 
-    <!-- アバウトセクション -->
+    <!-- About section -->
     <section id="about">
         <h2>About Me</h2>
-        <!-- ミッションについての記事 -->
-        <!-- articleユーザーにとってナビゲーションしやすい -->
+        <!-- Article about my journey -->
+        <!-- Articles help users navigate easily -->
         <article>
             <h3>My Journey</h3>
             <p>My journey in web development began with learning the basics of HTML, CSS, JavaScript, and Java. I started by creating simple web pages and gradually took on more complex projects to enhance my skills. While I am still building my expertise, each project and challenge helps me grow and gain confidence in my abilities.</p>
         </article>
-        <!-- スキルについての記事 ドットリスト-->
+        <!-- Article about skills with a bullet list -->
         <article>
             <h3>Skills & Expertise</h3>
             <ul>
@@ -54,7 +55,7 @@
         </article>
     </section>
 
-    <!-- プロジェクトセクション -->
+    <!-- Projects section -->
     <section id="projects">
         <h2>My Projects</h2>
         <ul>
@@ -64,7 +65,7 @@
         </ul>
     </section>
 
-    <!-- コンタクトセクション -->
+    <!-- Contact section -->
     <section id="contact">
         <h2>Contact Me</h2>
         <p>If you have any questions or would like to discuss a potential project, feel free to reach out:</p>
@@ -73,11 +74,10 @@
         <p>GitHub: <a href="https://github.com/Chie1115">github.com/Chie1115</a></p>
     </section>
 
-    <!-- フッター部分 -->
+    <!-- Footer section -->
     <footer>
-        <!-- 著作権表示 -->
+        <!-- Copyright notice -->
         <p>&copy; 2024 Chie Shikanai Eklund</p>
     </footer>
 </body>
 </html>
-
